@@ -27,6 +27,20 @@ name|cayenne
 operator|.
 name|map
 operator|.
+name|DbAttribute
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|map
+operator|.
 name|DbEntity
 import|;
 end_import
@@ -94,6 +108,16 @@ operator|.
 name|util
 operator|.
 name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collection
 import|;
 end_import
 
@@ -394,6 +418,80 @@ argument_list|,
 name|validationResult
 argument_list|)
 expr_stmt|;
+name|checkOnGeneratedStrategyConflict
+argument_list|(
+name|relationship
+argument_list|,
+name|validationResult
+argument_list|)
+expr_stmt|;
+block|}
+specifier|private
+name|void
+name|checkOnGeneratedStrategyConflict
+parameter_list|(
+name|DbRelationship
+name|relationship
+parameter_list|,
+name|ValidationResult
+name|validationResult
+parameter_list|)
+block|{
+if|if
+condition|(
+name|relationship
+operator|.
+name|isToDependentPK
+argument_list|()
+condition|)
+block|{
+name|Collection
+argument_list|<
+name|DbAttribute
+argument_list|>
+name|attributes
+init|=
+name|relationship
+operator|.
+name|getTargetEntity
+argument_list|()
+operator|.
+name|getGeneratedAttributes
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|DbAttribute
+name|attribute
+range|:
+name|attributes
+control|)
+block|{
+if|if
+condition|(
+name|attribute
+operator|.
+name|isGenerated
+argument_list|()
+condition|)
+block|{
+name|addFailure
+argument_list|(
+name|validationResult
+argument_list|,
+name|relationship
+argument_list|,
+literal|"'To Dep Pk' incompatible with Database-Generated on '%s' relationship"
+argument_list|,
+name|toString
+argument_list|(
+name|relationship
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
 block|}
 comment|/**      * Per CAY-1813, make sure two (or more) DbRelationships do not map to the      * same database path.      */
 specifier|private
